--- a/public/index.html
+++ b/public/index.html
@@ -3,5 +3,11 @@
     <head></head>
     <body>
         Chat App
+        <form id="message-form">
+            <input name="message" type="text" placeholder="Message">
+            <button>Send</button>
+        </form>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="js/chat.js"></script>
     </body>
 </html>
